add simple func create product
